--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </ul>
             </li>
             <li><a href="">PRODUCTOS</a></li>
-            <li><a href="">PRECIOS</a></li>
+            <li><a href="prices.html">PRECIOS</a></li>
             <li><a href="">NOSOTROS</a></li>
             <li><a href="">CLIENTES</a></li>
             <li><a href="">CONTACTO</a></li>
