mejora de espacios internos en boxes prices

--- a/prices.html
+++ b/prices.html
@@ -104,7 +104,7 @@
                 <h5 class="text-center f-5 pb-2">ACCEDÉ A TODO EL SISTEMA, DESDE EL NIVEL MÁS BAJO</h5>
                 <h2 class="text-center f-1">THINKION</h2>
             </header>
-
+            
             <section class="bx-70 center">
 
                 <section class="bx-50">
@@ -116,11 +116,11 @@
                             <p class="f-4 pb-2">Nivel 1</p>
                         </article>
 
-                        <article class="bx-f py-5">
+                        <article class="bx-f">
                             <p class="think-light">El primer nivel de Thinkion incluye todas las funcioanlidades del sistema, dando acceso completo desde el ingreso.</p>
                         </article>
 
-                        <article class="bx-f py-5">
+                        <article class="bx-f py-3">
                             <ul class="pl-3">
                                 <li>Soporte L a D 10 a 01 hs</li>
                                 <li>App de Venta</li>
@@ -136,7 +136,7 @@
 
                         </article>
 
-                        <article class="bx-f py-5">
+                        <article class="bx-f">
                             <p class="think-light">Incluye todas las integraciones con Pedidos Ya, Rappi, Wabi, Más Delivery y Mercado Pago. Facturas electrónicas ilimitadas. Pedidos por autopedido ilimitados, turnos digitales y más.</p>
                         </article>
 
@@ -153,11 +153,11 @@
                             <p class="f-4 pb-2">Nivel 1</p>
                         </article>
 
-                        <article class="bx-f py-5">
+                        <article class="bx-f">
                             <p class="think-light">El primer nivel de Thinkion incluye todas las funcioanlidades del sistema, dando acceso completo desde el ingreso.</p>
                         </article>
 
-                        <article class="bx-f py-5">
+                        <article class="bx-f py-3">
                             <ul class="pl-3">
                                 <li>Soporte L a D 10 a 01 hs</li>
                                 <li>App de Venta</li>
@@ -173,7 +173,7 @@
 
                         </article>
 
-                        <article class="bx-f py-5">
+                        <article class="bx-f">
                             <p class="think-light">Incluye todas las integraciones con Pedidos Ya, Rappi, Wabi, Más Delivery y Mercado Pago. Facturas electrónicas ilimitadas. Pedidos por autopedido ilimitados, turnos digitales y más.</p>
                         </article>
 
