agregado de componentes heros y responsive

--- a/index.html
+++ b/index.html
@@ -356,19 +356,19 @@
                         <img class="img-lg center-block" src="./imagenes/05.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/01.png">
+                        <img class="img-lg center-block" src="./imagenes/06.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/02.png">
+                        <img class="img-lg center-block" src="./imagenes/07.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/03.png">
+                        <img class="img-lg center-block" src="./imagenes/08.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/04.png">
+                        <img class="img-lg center-block" src="./imagenes/09.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/05.png">
+                        <img class="img-lg center-block" src="./imagenes/10.png">
                     </li>
                 </ul>
 
@@ -495,6 +495,74 @@
 
             </section>
             
+
+        </section>
+
+        <section id="flat-hero-1" class="h-f bx-f center bg-think">
+
+            <section class="bx-80 center">
+
+                <article class="bx-50 p-5">
+                    <h4 class="f-1 fc-w1">Título de la feature/spec.</h4>
+                    <p class="f-5 pt-5 pb-5 fc-w1 think-light">Tenemos integraciones con los principales servicios del mercado, cómo Mercado Pago, Pedidos Ya, Glovo, Rappi, Fudex entre otros.</p>
+                    <button class="btn fc-think">
+                        Ver mas...
+                    </button>
+                </article>
+
+                <article class="bx-50 center">
+                    <div class="mockup bg-think">
+                        <img class="mockup-image" src="https://i.pinimg.com/736x/f0/7f/20/f07f201159e983effa46446c76e80712.jpg">
+                    </div>
+                </article>
+
+            </section>
+
+        </section>
+
+
+        <section id="flat-hero-2" class="h-f bx-f center">
+
+            <section class="bx-80 center">
+
+                <article class="bx-50 center">
+                    <div class="mockup">
+                        <img class="mockup-image" src="https://i.pinimg.com/736x/f0/7f/20/f07f201159e983effa46446c76e80712.jpg">
+                    </div>
+                </article>
+
+                <article class="bx-50 p-5">
+                    <h4 class="f-1">Título de la feature/spec.</h4>
+                    <p class="f-5 pt-5 pb-5 think-light">Tenemos integraciones con los principales servicios del mercado, cómo Mercado Pago, Pedidos Ya, Glovo, Rappi, Fudex entre otros.</p>
+                    <button class="btn fc-think-black">
+                        Ver mas...
+                    </button>
+                </article>
+
+            </section>
+
+        </section>
+
+
+        <section id="flat-hero-3" class="h-f bx-f center bg-think-blue">
+
+            <section class="bx-80 center">
+
+                <article class="bx-50 center">
+                    <div class="mockup bg-think-blue">
+                        <img class="mockup-image" src="https://i.pinimg.com/736x/f0/7f/20/f07f201159e983effa46446c76e80712.jpg">
+                    </div>
+                </article>
+
+                <article class="bx-50 p-5">
+                    <h4 class="f-1">Título de la feature/spec.</h4>
+                    <p class="f-5 pt-5 pb-5 think-light">Tenemos integraciones con los principales servicios del mercado, cómo Mercado Pago, Pedidos Ya, Glovo, Rappi, Fudex entre otros.</p>
+                    <button class="btn fc-think-blue">
+                        Ver mas...
+                    </button>
+                </article>
+
+            </section>
 
         </section>
 
