Orden de components , paginas nuevas

--- a/prices.html
+++ b/prices.html
@@ -16,80 +16,89 @@
 
     <nav class="bg-think-dark">
         <div id="logo" class="bg-think">
-            <img src="./imagenes/logo.png" alt="">
+            <div>
+                <a href="index.html"><img src="./imagenes/logo.png"></a>
+            </div>
+            <div>
+                <img src="./imagenes/row-think.png" class="arrow-logo">
+            </div>
         </div>
         <ul id="menu">
             <li id="btn-think-submenu">
-                <span>THINKION</span>
+                <span class="links">THINKION</span>
+                
                 <ul id="sub-list">
+
+                    <div id="triangle"></div>
+
                     <section class="bx-f d-f wrap">
                         <article>
-                            <small class="fc-think f-6 think-light">Sistema Thinkion. 100% Integrado, 100% online.</small>
+                            <small class="fc-think f-16 pl-2"><span class="think-bold">Sistema Thinkion.</span> 100% Integrado, 100% online.</small>
                         </article>
-                        <article class="bx-50">
+                        <article class="bx-60">
                             <ul>
-                                <li>
+                                <li class="sub-btns">
                                     <div>
                                         <img src="./imagenes/icon-chat.png">
                                     </div>
-                                    <span>Como funciona?</span>   
+                                    <span><a href="proc-2.html">Como funciona</a></span>   
                                 </li>
-                                <li>
+                                <li class="sub-btns">
                                     <div>
                                         <img src="./imagenes/icon-chat.png">
                                     </div>
-                                    <span>Como funciona?</span>   
+                                    <span><a href="">App de venta</a></span>   
                                 </li>
-                                <li>
+                                <li class="sub-btns">
                                     <div>
                                         <img src="./imagenes/icon-chat.png">
                                     </div>
-                                    <span>Como funciona?</span>   
+                                    <span><a href="">Gestion y administración</a></span>   
                                 </li>
-                                <li>
+                                <li class="sub-btns">
                                     <div>
                                         <img src="./imagenes/icon-chat.png">
                                     </div>
-                                    <span>Como funciona?</span>   
+                                    <span><a href="">Reportes</a></span>   
                                 </li>
                             </ul>
                         </article>
-                        <article class="bx-50">
+                        <article class="bx-40">
                             <ul>
-                                <li>
+                                <li class="sub-btns">
                                     <div>
                                         <img src="./imagenes/icon-chat.png">
                                     </div>
-                                    <span>Como funciona?</span>   
+                                    <span><a href="">Integraciones</a></span>   
                                 </li>
-                                <li>
+                                <li class="sub-btns">
                                     <div>
                                         <img src="./imagenes/icon-chat.png">
                                     </div>
-                                    <span>Como funciona?</span>   
+                                    <span><a href="">Ecommerce</a></span>   
                                 </li>
-                                <li>
+                                <li class="sub-btns">
                                     <div>
                                         <img src="./imagenes/icon-chat.png">
                                     </div>
-                                    <span>Como funciona?</span>   
+                                    <span><a href="">Pack digital</a></span>   
                                 </li>
-                                <li>
+                                <li class="sub-btns">
                                     <div>
                                         <img src="./imagenes/icon-chat.png">
                                     </div>
-                                    <span>Como funciona?</span>   
+                                    <span><a href="">Reservas</a></span>   
                                 </li>
                             </ul>
                         </article>
                     </section>
                 </ul>
             </li>
-            <li><a href="">PRODUCTOS</a></li>
-            <li><a href="">PRECIOS</a></li>
-            <li><a href="">NOSOTROS</a></li>
-            <li><a href="">CLIENTES</a></li>
-            <li><a href="">CONTACTO</a></li>
+            <li><a class="links" href="products.html">PRODUCTOS</a></li>
+            <li><a class="links" href="prices.html">PRECIOS</a></li>
+            <li><a class="links" href="us.html">NOSOTROS</a></li>
+            <li><a class="links" href="">CLIENTES</a></li>
+            <li><a class="links" href="">CONTACTO</a></li>
         </ul>
         <div id="bx-btn">
             <img src="./imagenes/hamburger button.png" alt="">
@@ -477,5 +486,6 @@
 
     </footer>
 
+    <script src="js/toggle-menu.js"></script>
 </body>
 </html>
