Reparaciones de margenes y alineaciones de cajas parte 1

--- a/products.html
+++ b/products.html
@@ -371,7 +371,7 @@
 
         </section> 
 
-        <section id="customers" class="gral-padding center col" style="margin-top:150px;">
+        <section id="customers" class="gral-padding center col">
 
             <header class="bx-50 center col">
                 <h5 class="text-center f-5 pb-2 think-bold">ELIJEN THINK ERP</h5>
@@ -452,8 +452,6 @@
                 </button>
             </section>
 
-            
-
             <article class="bx-80" class="center">
 
                 <ul id="bx-displace-complementary" class="d-f wrap py-5">
@@ -462,8 +460,8 @@
                         <p class="f-26 line-ht2 fc-think">En Thinkion pensamos productos bla texto que da introduccion a los productos complementarios. </p>
                     </li>
                     <li class="bx-3 p-4">
-                        <div class="b-f h-3" style="position:relative;">
-                            <article class="box-thinks-products center" style="position:absolute;">
+                        <div class="b-f h-3 pos-r">
+                            <article class="box-thinks-products center pos-a">
                                 <h1 class="f-2 think-bold"> THINK <br> <span class="fc-think think-bold">FOOD</span></h1>
                             </article>
                             <img src="./imagenes/Mask Group.png" class="img-prouct">
