--- a/prices.html
+++ b/prices.html
@@ -254,37 +254,41 @@
 
                 </section>
 
-
             </section>
         
         </section>
 
-        <section id="our-products" class="gral-padding center col pos-r b">
+        <section id="our-products" class="gral-padding center col bg-think-gray">
 
             <header class="bx-50 center col">
-                <h2 class="text-center f-1 pb-2">Nuestros otros Productos</h2>
-                <h5 class="text-center f-6 pb-2">Todos nuestros productos incluyen desde la licencia única por local, el acceso completo a cada herramienta sin restricciones. Creemos que es importante que puedas vivir la experiencia completa siempre.</h5>
+                <h2 class="text-center think-bold f-1 pb-2">Nuestros otros Productos</h2>
+                <h5 class="text-center f-5 pb-2">Todos nuestros productos incluyen desde la licencia única por local, el acceso completo a cada herramienta sin restricciones. Creemos que es importante que puedas vivir la experiencia completa siempre.</h5>
             </header>
 
-            <section class="bx-90 wrap center">
+            <section class="bx-90 wrap mt-5 center">
 
                 <section class="bx-25">
-                    <section class="bx-f py-5 b text-center">
-                        <article class="bx-f p-3 fc-think">
-                            <h1 class="f-3">Ecommerce</h1>
-                            <h2 class="f-6">Delivery + Take Away</h2>
+                    <section class="bx-f py-5 center col bg-think-white text-center">
+                        <article class="bx-f p-1 fc-think">
+                            <h1 class="f-2 think-bold p-1">Dark Kitchen</h1>
+                            <h2 class="f-5 think-medium">Delivery + Take Away</h2>
                         </article>
-                        <article class="bx-f p-3 fc-think-blue">
-                            <h6 class="f-1">$ 5500</h6>
-                            <h2 class="f-6 think-light">Por licencia mensual</h2>
+                        <article class="bx-f fc-think-blue">
+                            <h6 class="f-1 think-bold p-1">$ 5500</h6>
+                            <h2 class="f-5">Por licencia mensual</h2>
                         </article>
-                        <article class="bx-f p-3">
-                            <p class="think-light">Manejá todos los locales que quieras dentro de tu ecommerce. Costo variable por pedido de 1.5%.</p>
+                        <article class="bx-90">
+                            <p class="line-ht4 text-j p-2">Manejá todos los locales que quieras dentro de tu ecommerce. Costo variable por pedido de 1.5%.</p>
+                        </article>
+
+                        <article class="section-btn center mt-1">
+                            <a href="customers.html" class="bx-f center">
+                                <button class="btn-price bg-think-yellow f-5 think-bold">
+                                    Trabajemos juntos
+                                </button>
+                            </a>
                         </article>
                         
-                        <button class="btn bx-f">
-                            Trabajemos juntos
-                        </button>
                     </section>
                 </section>
 
