creacion de paginas nuevas , subida de contenido y algunas imagenes

--- a/customers.html
+++ b/customers.html
@@ -207,97 +207,62 @@
             <article class="bx-90">
                 <ul class="center wrap">
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/01.png">
+                        <img class="img-lg center-block" src="./imagenes/customers/clubdelabirra.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/02.png">
+                        <img class="img-lg center-block" src="./imagenes/customers/costumbres.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/03.png">
+                        <img class="img-lg center-block" src="./imagenes/customers/crisol.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/04.png">
+                        <img class="img-lg center-block" src="./imagenes/customers/cuervo-cafe.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/05.png">
+                        <img class="img-lg center-block" src="./imagenes/customers/el_club_de_la_milanesa.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/03.png">
+                        <img class="img-lg center-block" src="./imagenes/customers/havanna.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/04.png">
+                        <img class="img-lg center-block" src="./imagenes/customers/LA-GUITARRITA.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/01.png">
+                        <img class="img-lg center-block" src="./imagenes/customers/logopatagonia.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/05.png">
+                        <img class="img-lg center-block" src="./imagenes/customers/sushi_2x1.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/01.png">
+                        <img class="img-lg center-block" src="./imagenes/customers/tacuara.png">
                     </li>
+
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/01.png">
-                    </li>
-                    <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/02.png">
-                    </li>
-                    <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/03.png">
-                    </li>
-                    <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/04.png">
-                    </li>
-                    <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/05.png">
-                    </li>
-                    <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/03.png">
-                    </li>
-                    <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/04.png">
-                    </li>
-                    <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/01.png">
-                    </li>
-                    <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/05.png">
-                    </li>
-                    <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/01.png">
-                    </li>
-                    <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/01.png">
-                    </li>
-                    <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/02.png">
-                    </li>
-                    <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/03.png">
-                    </li>
-                    <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/04.png">
-                    </li>
-                    <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/05.png">
-                    </li>
-                    <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/03.png">
-                    </li>
-                    <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/04.png">
-                    </li>
-                    <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/01.png">
-                    </li>
-                    <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/05.png">
-                    </li>
-                    <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/01.png">
+                        <img class="img-lg center-block" src="./imagenes/customers/temple.png">
                     </li>
                 </ul>
 
+            </article>
+
+        </section>
+
+        <section id="together" class="center bg-think-yellow ps-r">
+
+
+            <h1 class="revol-banner think-black"> REVO </h1>
+            <h1 class="revol-banner think-black"> LUCIO </h1>
+            <h1 class="revol-banner think-black"> NATE </h1>
+            
+            <article class="py-5 bx-50 center col">
+                <h5 class="f-5 pb-2 think-bold">CONTACTO</h5>
+                <h2 class="f-1 pb-5 think-bold text-center">Trabajemos juntos</h2>
+                <article class="section-btn bx-f center">
+                    <a href="#" class="bx-f center">
+                        <button class="btn bg-think-dark fc-w1 think-bold">
+                            Contactanos
+                        </button>
+                    </a>
+                </article>
             </article>
 
         </section>
