--- a/how-does-it-work.html
+++ b/how-does-it-work.html
@@ -287,15 +287,7 @@
 
                 <article class="bx-50 center">
 
-                    <img src="./imagenes/Benefits.png" class="img-integrations">
-
-                    <!-- <img src="./imagenes/integrations/01.png" class="integrations">
-                    <img src="./imagenes/integrations/02.png" class="integrations">
-                    <img src="./imagenes/integrations/03.png" class="integrations">
-                    <img src="./imagenes/integrations/04.png" class="integrations">
-                    <div class="circle c-yellow bg-think-yellow"></div>
-                    <div class="circle green"></div>
-                    <div class="circle lila"></div> -->
+                    <img src="./imagenes/how-does-it-work/simple-y-poderosa.jpg" class="img-integrations">
 
                 </article>
 
@@ -309,15 +301,7 @@
 
                 <article class="bx-50 center">
 
-                    <img src="./imagenes/Benefits.png" class="img-integrations">
-
-                    <!-- <img src="./imagenes/integrations/01.png" class="integrations">
-                    <img src="./imagenes/integrations/02.png" class="integrations">
-                    <img src="./imagenes/integrations/03.png" class="integrations">
-                    <img src="./imagenes/integrations/04.png" class="integrations">
-                    <div class="circle c-yellow bg-think-yellow"></div>
-                    <div class="circle green"></div>
-                    <div class="circle lila"></div> -->
+                    <img src="./imagenes/how-does-it-work/produccion-gestion-admin.jpg" class="img-integrations">
 
                 </article>
 
@@ -375,15 +359,7 @@
 
                 <article class="bx-50 center">
 
-                    <img src="./imagenes/Benefits.png" class="img-integrations">
-
-                    <!-- <img src="./imagenes/integrations/01.png" class="integrations">
-                    <img src="./imagenes/integrations/02.png" class="integrations">
-                    <img src="./imagenes/integrations/03.png" class="integrations">
-                    <img src="./imagenes/integrations/04.png" class="integrations">
-                    <div class="circle c-yellow bg-think-yellow"></div>
-                    <div class="circle green"></div>
-                    <div class="circle lila"></div> -->
+                    <img src="./imagenes/how-does-it-work/reportes.jpg" class="img-integrations">
 
                 </article>
 
@@ -397,15 +373,7 @@
 
                 <article class="bx-50 center">
 
-                    <img src="./imagenes/Benefits.png" class="img-integrations">
-
-                    <!-- <img src="./imagenes/integrations/01.png" class="integrations">
-                    <img src="./imagenes/integrations/02.png" class="integrations">
-                    <img src="./imagenes/integrations/03.png" class="integrations">
-                    <img src="./imagenes/integrations/04.png" class="integrations">
-                    <div class="circle c-yellow bg-think-yellow"></div>
-                    <div class="circle green"></div>
-                    <div class="circle lila"></div> -->
+                    <img src="./imagenes/how-does-it-work/integraciones.jpg" class="img-integrations">
 
                 </article>
 
@@ -459,7 +427,7 @@
 
         </section>
 
-        <section id="customers" class="pb-5 center col">
+        <section id="customers" class="gral-padding center col">
 
             <header class="bx-50 center col">
                 <h5 class="text-center f-5 pb-2 think-bold">ELIJEN THINK ERP</h5>
@@ -469,41 +437,41 @@
             <article class="bx-90">
                 <ul class="center wrap">
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/01.png">
+                        <img class="img-lg center-block" src="./imagenes/customers/clubdelabirra.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/02.png">
+                        <img class="img-lg center-block" src="./imagenes/customers/costumbres.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/03.png">
+                        <img class="img-lg center-block" src="./imagenes/customers/crisol.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/04.png">
+                        <img class="img-lg center-block" src="./imagenes/customers/cuervo-cafe.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/05.png">
+                        <img class="img-lg center-block" src="./imagenes/customers/el_club_de_la_milanesa.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/03.png">
+                        <img class="img-lg center-block" src="./imagenes/customers/havanna.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/04.png">
+                        <img class="img-lg center-block" src="./imagenes/customers/LA-GUITARRITA.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/01.png">
+                        <img class="img-lg center-block" src="./imagenes/customers/logopatagonia.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/05.png">
+                        <img class="img-lg center-block" src="./imagenes/customers/sushi_2x1.png">
                     </li>
                     <li class="bx-20">
-                        <img class="img-lg center-block" src="./imagenes/01.png">
+                        <img class="img-lg center-block" src="./imagenes/customers/tacuara.png">
                     </li>
                 </ul>
 
             </article>
 
             <article class="section-btn bx-f center mt-5">
-                <a href="#" class="bx-f center">
+                <a href="customers.html" class="bx-f center">
                     <button class="btn bg-think fc-w1 think-bold">
                         Ver todos los clientes
                     </button>
@@ -657,7 +625,7 @@
 
         </section>
 
-        <section id="together" class="center bg-think-yellow ps-r" style="display:none;">
+        <section id="together" class="center bg-think-yellow ps-r">
 
 
             <h1 class="revol-banner think-black"> REVO </h1>
